--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Credit Card UI</title>
     <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="icon" href="./assets/images/htmlLogo.svg" />
   </head>
   <body>
     <section>
