Typecard alterado de débito pra crédito :D

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <div class="card">
         <div class="face front">
-          <h3 class="typeCard">Cartão de débito</h3>
+          <h3 class="typeCard">Cartão de crédito</h3>
           <h3 class="bankName">Banco</h3>
           <img src="./assets/images/chip.png" alt="" class="chip" />
           <h3 class="number">0123 4567 8901 2345</h3>
